2008-05-30  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/consumers/httpstreamer/admin_gtk.py
	(StatisticsAdminGtkNode._updateLabels): link can still be None,
	really protect against it.

	* flumotion/admin/gtk/adminwindow.py:
	call activateComponent with None if no component is selected, this
	allows you to deselect all to get back to the planet view

	* flumotion/admin/gtk/componentlist.py
	(ComponentList._selectionChanged): emit an empty list instead of None

	* flumotion/admin/gtk/componentview.py (PlanetPlaceholder.getWidget):
	Add a simple placeholder for planets, nothing to see yet, just improving
	the infrastructure in preparation for #986

	* flumotion/twisted/flavors.py (StateRemoteCache.addListener): Improve
	error message when an instance is already listening to remote cache

	* flumotion/admin/gtk/componentview.py:
	Avoid using timestamps, create an abstract base class
	for different kind of widgets called placeholder.
	Rename some variables to make even more sense.

	* flumotion/ui/wizard.py (SectionWizard.__init__): Remove last
	traces of getFirstStep.

	* flumotion/admin/gtk/adminwindow.py
	(AdminWindow._connectionOpened): update componentview callsite

	* flumotion/admin/gtk/componentview.py:
	CamelCasifying, fix imports, document, rename  methods and variables
	to make more sense

	* flumotion/admin/gtk/message.py: General maintainance,
	clean up imports, improve naming, refactor large methods
	into smaller ones, rename variables.
	And two tiny extra changes.

2008-05-29  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Handle the initial case where no porters are available
	* flumotion/ui/wizard.py:
	(SectionWizard.run): Invert the check of sections, so it work
	with an empty initial wizard.

	* data/glade/Makefile.am:
	* data/glade/select-producers-wizard.glade:
	* flumotion/admin/gtk/addformatwizard.py:
	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/ui/wizard.py: